Fixup screwy line numbers when not enough code width
table layout would take over and expand line number column

also add example of code block with linenos

--- a/master/_static/odoo.css
+++ b/master/_static/odoo.css
@@ -24,6 +24,9 @@
 .slides > article .highlighttable {
     margin: 0.5em 0;
 }
+.slides > article td.linenos {
+    width: 1px;
+}
 .slides > article td.linenos pre {
     padding: 5px;
 }
