[ADD] italic and bold versions of Lato
so titles don't look like crap and nwi does not murder me

--- a/master/_static/odoo.css
+++ b/master/_static/odoo.css
@@ -1,6 +1,26 @@
 @font-face {
-    font-family: Lato;
-    src: url(Lato-Reg.ttf);
+    font-family: 'Lato';
+    src: url('Lato-Reg.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Lato';
+    src: url('Lato-RegIta.ttf') format('truetype');
+    font-weight: normal;
+    font-style: italic;
+}
+@font-face {
+    font-family: 'Lato';
+    src: url('Lato-Bol.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Lato';
+    src: url('Lato-BolIta.ttf') format('truetype');
+    font-weight: bold;
+    font-style: italic;
 }
 @font-face {
     font-family: FontAwesome;
