[IMP] remove letter-spacing compression on secondary titles

--- a/master/_static/odoo.css
+++ b/master/_static/odoo.css
@@ -115,6 +115,7 @@
     border-bottom: 1px solid #a24689;
     margin-right: -60px;
     margin-left: 28%;
+    letter-spacing: normal;
 }
 
 /* FULLSCREEN */
