Do not display name on first slide

--- a/mat_gamification/_static/custom.css
+++ b/mat_gamification/_static/custom.css
@@ -1,6 +1,6 @@
 @import url("odoo.css");
 
-.slides > article:after {
+.slides > article:not(.level-1):after {
     content: "Martin Trigaux (mat@odoo.com)";
     position: absolute;
     right: 1em;
