more slides and screenshots

--- a/mat_gamification/_static/custom.css
+++ b/mat_gamification/_static/custom.css
@@ -1,5 +1,9 @@
 @import url("odoo.css");
 
+.slides > article h1 {
+	font-size: 1.7em;
+}
+
 .slides > article:not(.level-1):after {
     content: "Martin Trigaux (mat@odoo.com)";
     position: absolute;
