[FIX] print CSS: use relative positioning on slides so absolutely positioned titles and logos don't flee

--- a/master/_static/odoo.css
+++ b/master/_static/odoo.css
@@ -208,3 +208,10 @@ pre {
 	  font-size: .5em !important;
 }
 
+@media print {
+    .slides > article {
+        position: relative !important;
+        left: 0;
+        top: 0;
+    }
+}
